# Arithmetize

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: rust.yml
content/: 1main-window.ui  app.gresource.xml  game.ui  main-window.ui
src/: game.glade  logic.rs  main.rs  test.glade
src/game/: gamewin.rs  mod.rs
src/main_window/: mainwin.rs  mod.rs  template.rs
