[package]
name = "aritmetize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk     =   {version = "*", features = ["v3_16"]}
gio = {version = "*", features =["v2_44"]}
glib = "*"
gdk = "*"

rand = "0.8.5"