[package]
name = "aritmetize"
version = "0.1.0"
edition = "2021"

[package.metadata.appimage]
assets = ["images"]
auto_link = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "*"
adw = {version="*", package="libadwaita"}
glib = "*"

rand = "0.8.5"

[build-dependencies]

adw = {version="*",package="libadwaita"}